--- a/src/main/resources/templates/AdminHome.html
+++ b/src/main/resources/templates/AdminHome.html
@@ -206,11 +206,11 @@
 
                         <!-- Card 3 -->
                         <div class="col-sm-4 mb-4">
-                            <a href="/AdminManageCities" class="card-link">
+                            <a href="/AdminManageServiceProviders" class="card-link">
                                 <div class="card h-100 clickable-card bg-light text-center">
                                     <img src="img/ui/icons/2.png" class="card-img-top" alt="Manage Pending">
                                     <div class="card-body d-flex flex-column justify-content-center">
-                                        <h1 class="btn btn-danger card-title m-0">Manage Pending</h1>
+                                        <h1 class="btn btn-danger card-title m-0">Manage Service Providers</h1>
                                     </div>
                                 </div>
                             </a>
