--- a/src/main/resources/templates/VendorHeader.html
+++ b/src/main/resources/templates/VendorHeader.html
@@ -30,7 +30,10 @@
                             </div>
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                                    <li class="mil-has-children mil-current">
+                                    <li class="mil-current">
+                                        <a href="/VendorHome">Home</a>
+                                    </li>
+                                    <li class="mil-has-children">
                                         <a href="#">Vendor</a>
                                         <ul>
                                             <li>
