NAV BAR REDIRECTION FIXED

--- a/src/main/resources/templates/UserHeader.html
+++ b/src/main/resources/templates/UserHeader.html
@@ -30,16 +30,8 @@
                             </div>
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                                    <li class="mil-has-children mil-current">
-                                        <a href="#">User</a>
-                                        <ul>
-                                            <li>
-                                                <a href="/UserSignUp">User Sign Up</a>
-                                            </li>
-                                            <li>
-                                                <a href="/UserLogin">User Login</a>
-                                            </li>
-                                        </ul>
+                                    <li class="mil-current">
+                                        <a href="/Userlogout">Home</a>
                                     </li>
                                     <li>
                                         <a href="/UserChangePassword">Change Password</a>
@@ -149,9 +141,9 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li>
+<!--                                    <li>
                                         <a href="/Userlogout">Logout</a>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </nav>
                             <div class="mil-right mil-jce">
