--- a/src/main/resources/templates/VendorHeader.html
+++ b/src/main/resources/templates/VendorHeader.html
@@ -31,7 +31,7 @@
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
                                     <li class="mil-current">
-                                        <a href="/VendorHome">Home</a>
+                                        <a href="/">Home</a>
                                     </li>
                                     <li class="mil-has-children">
                                         <a href="#">Vendor</a>
@@ -160,9 +160,9 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li>
+<!--                                    <li>
                                         <a href="/Userlogout">Logout</a>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </nav>
                             <div class="mil-right mil-jce">
