--- a/src/main/resources/templates/AdminHeader.html
+++ b/src/main/resources/templates/AdminHeader.html
@@ -30,8 +30,8 @@
                             </div>
                             <nav class="mil-main-menu">
                                 <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                                    <li class="mil-has-children mil-current">
-                                        <a href="/AdminLogin">Admin Login</a>
+                                    <li class="mil-current">
+                                        <a href="/">Home</a>
                                     </li>
                                     <li>
                                         <a href="/AdminManageCities">Manage Cities</a>
@@ -144,9 +144,9 @@
                                             </li>
                                         </ul>
                                     </li>
-                                    <li>
+<!--                                    <li>
                                         <a href="/Userlogout">Logout</a>
-                                    </li>
+                                    </li>-->
                                 </ul>
                             </nav>
                             <div class="mil-right mil-jce">
